# smart-jupyterlab-codex-assistant

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  NOTICE  QUICKSTART.txt  README.md  RELEASE.md  SECURITY.md  SHA256SUMS.txt  diagnostics.sh  install.json  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  uninstall.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  release.yml
jupyter_notebook_assistant/: __init__.py
jupyter_notebook_assistant/labextension/: package.json
jupyter_notebook_assistant/labextension/static/: 681.bda694b5e8eb4d0643b9.js  800.677ad5a0dd283ca20415.js  remoteEntry.3182328577efaec6d8d1.js  style.js  third-party-licenses.json
lib/: codex.d.ts  codex.js  codex.js.map  context.d.ts  context.js  context.js.map  directive.d.ts  directive.js  directive.js.map  index.d.ts  index.js  index.js.map  settings.d.ts  settings.js  settings.js.map  types.d.ts  types.js  types.js.map  widgets.d.ts  widgets.js  widgets.js.map
src/: codex.ts  context.ts  directive.ts  index.ts  settings.ts  types.ts  widgets.ts
style/: index.css
